--- a/_posts/2014-04-24-New-post.markdown
+++ b/_posts/2014-04-24-New-post.markdown
@@ -2,13 +2,11 @@
 layout: post
 title:  "Vive les wagons"
 ---
+#Les plus belles tenues de Daniel Balavoine
 
-Salut [les petits poulets](http://www.kfc.fr)
+Le balavoine en cuir
+![alt text](http://www.motnueq.com/medias/images/2879151546-1.jpg "Le balavoine en cuir")
 
-Tu peux manger tout ça au wagon bar:
+Le balavoine les cheveux dans le vent
+![alt text](http://s.tf1.fr/mmdia/i/76/4/daniel-balavoine-10464764clzuj_2220.jpg?v=1 "Le balavoine qui boucle")
 
-1. BBQ Ribs
-2. Big Bucket
-3. LA Frite
-
-#Hello les kids
